--- a/src/app/common/components/BrowserRoot/Header.scss
+++ b/src/app/common/components/BrowserRoot/Header.scss
@@ -32,7 +32,7 @@
 	cursor: pointer;
 }
 .header_cvm3v7 > .menu-container > .icon_rour3d + .icon_rour3d {
-	margin-left: 15px;
+	margin-left: 20px;
 }
 
 @media (max-width: 499px) {
